[waterflow] 初步合并完代码，解决源码的编译问题，测试代码未处理编译问题