@@ -6,27 +6,21 @@
 
 package modelengine.fit.waterflow.flowsengine.domain.flows.context.repo.flowcontext;
 
-import static modelengine.fit.waterflow.ErrorCodes.ENTITY_NOT_FOUND;
-import static modelengine.fit.waterflow.ErrorCodes.INPUT_PARAM_IS_EMPTY;
-import static modelengine.fit.waterflow.common.Constant.CONTEXT_EXCLUSIVE_STATUS_MAP;
-import static modelengine.fit.waterflow.common.Constant.RETRY_INTERVAL;
-import static modelengine.fit.waterflow.common.Constant.STREAM_ID_SEPARATOR;
-import static modelengine.fit.waterflow.common.Constant.TO_BATCH_KEY;
-
+import modelengine.fit.waterflow.domain.context.FlowContext;
+import modelengine.fit.waterflow.domain.context.FlowSession;
+import modelengine.fit.waterflow.domain.context.FlowTrace;
+import modelengine.fit.waterflow.domain.context.repo.flowcontext.FlowContextMemoRepo;
+import modelengine.fit.waterflow.domain.context.repo.flowcontext.FlowContextRepo;
+import modelengine.fit.waterflow.domain.context.repo.flowtrace.FlowTraceRepo;
+import modelengine.fit.waterflow.domain.enums.FlowNodeStatus;
+import modelengine.fit.waterflow.domain.enums.FlowTraceStatus;
+import modelengine.fit.waterflow.domain.stream.operators.Operators;
+import modelengine.fit.waterflow.domain.utils.IdGenerator;
 import modelengine.fit.waterflow.exceptions.WaterflowException;
 import modelengine.fit.waterflow.flowsengine.biz.service.TraceOwnerService;
-import modelengine.fit.waterflow.flowsengine.domain.flows.context.FlowContext;
 import modelengine.fit.waterflow.flowsengine.domain.flows.context.FlowData;
 import modelengine.fit.waterflow.flowsengine.domain.flows.context.FlowRetry;
-import modelengine.fit.waterflow.flowsengine.domain.flows.context.FlowTrace;
-import modelengine.fit.waterflow.flowsengine.domain.flows.context.FlowTrans;
 import modelengine.fit.waterflow.flowsengine.domain.flows.context.repo.flowretry.FlowRetryRepo;
-import modelengine.fit.waterflow.flowsengine.domain.flows.context.repo.flowtrace.FlowTraceRepo;
-import modelengine.fit.waterflow.flowsengine.domain.flows.enums.FlowNodeStatus;
-import modelengine.fit.waterflow.flowsengine.domain.flows.enums.FlowTraceStatus;
-import modelengine.fit.waterflow.flowsengine.domain.flows.streams.IdGenerator;
-import modelengine.fit.waterflow.flowsengine.domain.flows.streams.Processors.Filter;
-import modelengine.fit.waterflow.flowsengine.domain.flows.streams.Processors.Validator;
 import modelengine.fit.waterflow.flowsengine.persist.entity.FlowContextUpdateInfo;
 import modelengine.fit.waterflow.flowsengine.persist.mapper.FlowContextMapper;
 import modelengine.fit.waterflow.flowsengine.persist.po.FlowContextPO;
@@ -50,6 +44,12 @@ import java.util.Optional;
 import java.util.Set;
 import java.util.stream.Collectors;
 
+import static modelengine.fit.waterflow.ErrorCodes.ENTITY_NOT_FOUND;
+import static modelengine.fit.waterflow.common.Constant.CONTEXT_EXCLUSIVE_STATUS_MAP;
+import static modelengine.fit.waterflow.common.Constant.RETRY_INTERVAL;
+import static modelengine.fit.waterflow.common.Constant.STREAM_ID_SEPARATOR;
+import static modelengine.fit.waterflow.common.Constant.TO_BATCH_KEY;
+
 /**
  * 持久化{@link FlowContext}对象到数据库核心类
  * 与{@link FlowContextMemoRepo}组成{@link FlowContextRepo}的不同实现
@@ -59,7 +59,7 @@ import java.util.stream.Collectors;
  */
 @Component
 @Alias("flowContextPersistRepo")
-public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
+public class FlowContextPersistRepo implements FlowContextRepo {
     private static final Logger log = Logger.get(FlowContextPersistRepo.class);
 
     private static final String TRACE_ID_SEPARATE = ", ";
@@ -112,7 +112,7 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
     }
 
     @Override
-    public List<FlowContext<FlowData>> getContextsByPosition(String streamId, List<String> posIds, String status) {
+    public <T> List<FlowContext<T>> getContextsByPosition(String streamId, List<String> posIds, String status) {
         List<String> traceIds = this.traceOwnerService.getTraces();
         if (traceIds.isEmpty()) {
             log.warn("There is no trace owned.");
@@ -123,54 +123,48 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
             log.info("[getContextsByPosition] Empty contexts. traceIds={}, pos={}.", StringUtils.join(',', traceIds),
                     StringUtils.join(',', posIds));
         }
-        return pos.stream().map(this::serializer).collect(Collectors.toList());
+        return pos.stream().map(this::serializer).map(ObjectUtils::<FlowContext<T>>cast).collect(Collectors.toList());
     }
 
     @Override
-    public List<FlowContext<FlowData>> getContextsByPosition(String streamId, String posId, String batchId,
+    public <T> List<FlowContext<T>> getContextsByPosition(String streamId, String posId, String batchId,
             String status) {
         List<FlowContextPO> pos = contextMapper.findByPositionWithBatchId(streamId, posId, batchId, status);
-        return pos.stream().map(this::serializer).collect(Collectors.toList());
+        return pos.stream().map(this::serializer).map(ObjectUtils::<FlowContext<T>>cast).collect(Collectors.toList());
     }
 
     @Override
-    public List<FlowContext<String>> findWithoutFlowDataByTraceId(String traceId) {
+    public <T> List<FlowContext<T>> findWithoutFlowDataByTraceId(String traceId) {
         return contextMapper.findWithoutFlowDataByTraceId(traceId)
                 .stream()
                 .map(this::serializerAsString)
+                .map(ObjectUtils::<FlowContext<T>>cast)
                 .collect(Collectors.toList());
     }
 
     @Override
-    public List<FlowContext<String>> getContextsByTrace(String traceId) {
-        FlowTrace trace = traceRepo.find(traceId);
-        if (!Optional.ofNullable(trace).isPresent() || CollectionUtils.isEmpty(trace.getContextPool())) {
-            return new ArrayList<>();
-        }
-        List<FlowContextPO> pos = contextMapper.findByContextIdList(new ArrayList<>(trace.getContextPool()));
-        return pos.stream().map(this::serializerAsString).collect(Collectors.toList());
-    }
-
-    @Override
-    public List<FlowContext<FlowData>> getContextsByTrace(String traceId, String status) {
+    public <T> List<FlowContext<T>> getContextsByTrace(String traceId) {
         FlowTrace trace = traceRepo.find(traceId);
         if (!Optional.ofNullable(trace).isPresent() || CollectionUtils.isEmpty(trace.getContextPool())) {
             return new ArrayList<>();
         }
         List<FlowContextPO> pos = contextMapper.findByContextIdList(new ArrayList<>(trace.getContextPool()));
         return pos.stream()
-                .filter(context -> status.equals(context.getStatus()))
-                .map(this::serializer)
+                .map(this::serializerAsString)
+                .map(ObjectUtils::<FlowContext<T>>cast)
                 .collect(Collectors.toList());
     }
 
     @Override
-    public void save(List<FlowContext<FlowData>> flowContexts) {
-        if (flowContexts == null || flowContexts.size() == 0) {
+    public <T> void save(List<FlowContext<T>> flowContexts) {
+        if (CollectionUtils.isEmpty(flowContexts)) {
             return;
         }
         FlowContextPO flowContextPO = contextMapper.find(flowContexts.get(0).getId());
-        List<FlowContextPO> flowContextPOS = flowContexts.stream().map(this::serializer).collect(Collectors.toList());
+        List<FlowContextPO> flowContextPOS = flowContexts.stream()
+                .map(ObjectUtils::<FlowContext<FlowData>>cast)
+                .map(this::serializer)
+                .collect(Collectors.toList());
         if (flowContextPO == null) {
             contextMapper.batchCreate(flowContextPOS);
         } else {
@@ -183,61 +177,51 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
     }
 
     @Override
-    public void update(List<FlowContext<FlowData>> contexts) {
-        List<FlowContextPO> flowContextPOS = contexts.stream().map(this::serializer).collect(Collectors.toList());
+    public <T> void update(List<FlowContext<T>> contexts) {
+        List<FlowContextPO> flowContextPOS = contexts.stream()
+                .map(ObjectUtils::<FlowContext<FlowData>>cast)
+                .map(this::serializer)
+                .collect(Collectors.toList());
         batchUpdate(flowContextPOS);
     }
 
     @Override
-    public void saveWithoutPassData(List<FlowContext<FlowData>> flowContexts) {
-        if (flowContexts == null || flowContexts.size() == 0) {
-            return;
-        }
-
-        FlowContextPO flowContextPO = contextMapper.find(flowContexts.get(0).getId());
-        List<FlowContextPO> flowContextPOS = flowContexts.stream().map(this::serializer).collect(Collectors.toList());
-        if (flowContextPO == null) {
-            contextMapper.batchCreate(flowContextPOS);
-        } else {
-            batchUpdate(flowContextPOS);
-        }
-    }
-
-    @Override
-    public void save(FlowContext<FlowData> context) {
-        throw new WaterflowException(INPUT_PARAM_IS_EMPTY);
-    }
-
-    @Override
-    public void updateToSent(List<FlowContext<FlowData>> contexts) {
+    public <T> void updateToSent(List<FlowContext<T>> contexts) {
         contextMapper.updateToSent(contexts.stream().map(IdGenerator::getId).collect(Collectors.toList()));
     }
 
     @Override
-    public void updateToReady(List<FlowContext<FlowData>> flowContexts) {
-        throw new WaterflowException(INPUT_PARAM_IS_EMPTY);
-    }
-
-    @Override
-    public void updateFlowDataAndToBatch(List<FlowContext<FlowData>> contexts) {
-        List<FlowContextPO> flowContextPOS = contexts.stream().map(this::serializer).collect(Collectors.toList());
+    public <T> void updateFlowDataAndToBatch(List<FlowContext<T>> contexts) {
+        List<FlowContextPO> flowContextPOS = contexts.stream()
+                .map(ObjectUtils::<FlowContext<FlowData>>cast)
+                .map(this::serializer)
+                .collect(Collectors.toList());
         this.contextMapper.updateFlowDataAndToBatch(flowContextPOS);
     }
 
     @Override
-    public void updateFlowData(Map<String, FlowData> flowDataList) {
+    public <T> void updateFlowData(Map<String, T> flowDataList) {
         this.contextMapper.updateFlowData(flowDataList.entrySet()
                 .stream()
-                .collect(Collectors.toMap(Map.Entry<String, FlowData>::getKey,
-                        entry -> entry.getValue().translateToJson())));
+                .collect(Collectors.toMap(Map.Entry<String, T>::getKey,
+                        entry -> ObjectUtils.<FlowData>cast(entry.getValue()).translateToJson())));
     }
 
     @Override
-    public void updateStatus(List<FlowContext<FlowData>> contexts, String status, String position) {
+    public <T> void updateFlowData(List<FlowContext<T>> flowContexts) {
+        this.contextMapper.updateFlowData(flowContexts.stream()
+                .collect(Collectors.toMap(FlowContext<T>::getId,
+                        context -> ObjectUtils.<FlowData>cast(context).translateToJson())));
+    }
+
+    @Override
+    public <T> void updateStatus(List<FlowContext<T>> contexts, String status, String position) {
         List<String> ids = contexts.stream().map(IdGenerator::getId).collect(Collectors.toList());
+        String toBatch = contexts.get(0).getToBatch();
         LocalDateTime updateAt = LocalDateTime.now();
         LocalDateTime archivedAt = status.equals(FlowNodeStatus.ARCHIVED.toString()) ? updateAt : null;
-        contextMapper.updateStatusAndPosition(ids, new FlowContextUpdateInfo(status, position, updateAt, archivedAt),
+        contextMapper.updateStatusAndPosition(ids,
+                new FlowContextUpdateInfo(toBatch, status, position, updateAt, archivedAt),
                 CONTEXT_EXCLUSIVE_STATUS_MAP.get(status));
     }
 
@@ -261,56 +245,83 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
     }
 
     @Override
-    public List<FlowContext<FlowData>> getContextsByParallel(String parallelId) {
+    public <T> void updateIndex(List<FlowContext<T>> flowContexts) {
+
+    }
+
+    @Override
+    public <T> List<FlowContext<T>> getContextsByParallel(String parallelId) {
         return new ArrayList<>();
     }
 
     @Override
-    public FlowContext<FlowData> getById(String id) {
-        return Optional.ofNullable(contextMapper.find(id)).map(this::serializer).orElseThrow(() -> {
-            log.error("Cannot find flow context by ID {}.", id);
-            return new WaterflowException(ENTITY_NOT_FOUND, "FlowContext", id);
-        });
+    public <T> FlowContext<T> getById(String id) {
+        return Optional.ofNullable(contextMapper.find(id))
+                .map(this::serializer)
+                .map(ObjectUtils::<FlowContext<T>>cast)
+                .orElseThrow(() -> {
+                    log.error("Cannot find flow context by ID {}.", id);
+                    return new WaterflowException(ENTITY_NOT_FOUND, "FlowContext", id);
+                });
     }
 
     @Override
-    public List<FlowContext<FlowData>> getByToBatch(List<String> toBatchIds) {
+    public <T> List<FlowContext<T>> getByToBatch(List<String> toBatchIds) {
         if (toBatchIds.isEmpty()) {
             return new ArrayList<>();
         }
         List<FlowContextPO> pos = contextMapper.findByToBatch(toBatchIds);
-        return pos.stream().map(this::serializer).collect(Collectors.toList());
+        return pos.stream().map(this::serializer).map(ObjectUtils::<FlowContext<T>>cast).collect(Collectors.toList());
     }
 
     @Override
-    public List<FlowContext<FlowData>> getPendingAndSentByIds(List<String> ids) {
+    public <T> List<FlowContext<T>> getPendingAndSentByIds(List<String> ids) {
         return contextMapper.findByContextIdList(ids)
                 .stream()
                 .filter(p -> p.getStatus().equals(FlowNodeStatus.PENDING.toString()))
                 .filter(FlowContextPO::isSent)
                 .map(this::serializer)
+                .map(ObjectUtils::<FlowContext<T>>cast)
                 .collect(Collectors.toList());
     }
 
     @Override
-    public List<FlowContext<FlowData>> getByIds(List<String> ids) {
-        return contextMapper.findByContextIdList(ids).stream().map(this::serializer).collect(Collectors.toList());
+    public <T> List<FlowContext<T>> getByIds(List<String> ids) {
+        return contextMapper.findByContextIdList(ids)
+                .stream()
+                .map(this::serializer)
+                .map(ObjectUtils::<FlowContext<T>>cast)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<FlowContext<FlowData>> requestMappingContext(String streamId, List<String> subscriptions,
-            Filter<FlowData> filter, Validator<FlowData> validator) {
+    public <T> List<FlowContext<T>> requestMappingContext(String streamId, List<String> subscriptions,
+            Map<String, Integer> sessions) {
         List<String> traces = this.traceOwnerService.getTraces();
         List<FlowContextPO> pos = contextMapper.findBySubscriptions(streamId, subscriptions,
                 FlowNodeStatus.PENDING.toString(), traces);
-        List<FlowContext<FlowData>> all = pos.stream().map(this::serializer).collect(Collectors.toList());
-        List<FlowContext<FlowData>> filters = filter.process(all);
-        return filters.stream().filter(c -> validator.check(c, filters)).collect(Collectors.toList());
+        List<FlowContext<FlowData>> all = pos.stream().map(this::serializer).toList();
+        return all.stream()
+                .filter(context -> {
+                    boolean found = false;
+                    for (String s : sessions.keySet()) {
+                        found = context.getSession().getId().equals(s)
+                                && (Objects.equals(context.getIndex(), sessions.get(s)));
+                        if (found) {
+                            break;
+                        }
+                    }
+                    // 找到需要保序的当前序列或者不需要保序的
+                    return context.getIndex() == -1 || context.getIndex() == 0 || found;
+                })
+                .limit(1)
+                .map(ObjectUtils::<FlowContext<T>>cast)
+                .collect(Collectors.toList());
     }
 
     @Override
-    public List<FlowContext<FlowData>> requestProducingContext(String streamId, List<String> subscriptions,
-            Filter<FlowData> filter) {
+    public <T> List<FlowContext<T>> requestProducingContext(String streamId, List<String> subscriptions,
+            Operators.Filter<T> filter) {
         List<FlowContextPO> pos;
         List<String> traces = this.traceOwnerService.getTraces();
         if (traces.isEmpty()) {
@@ -323,8 +334,10 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         } else {
             pos = contextMapper.findBySubscriptions(streamId, subscriptions, FlowNodeStatus.PENDING.toString(), traces);
         }
-        List<FlowContext<FlowData>> result =
-                filter.process(pos.stream().map(this::serializer).collect(Collectors.toList()));
+        List<FlowContext<T>> result = filter.process(pos.stream()
+                .map(this::serializer)
+                .map(ObjectUtils::<FlowContext<T>>cast)
+                .collect(Collectors.toList()));
         if (result.isEmpty()) {
             log.info("[requestProducingContext] Empty contexts. traceIds={}, pos={}, beforeSize={}, afterSize={}.",
                     StringUtils.join(',', traces), StringUtils.join(',', subscriptions), pos.size(), result.size());
@@ -333,10 +346,13 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
     }
 
     @Override
-    public List<FlowContext<FlowData>> findByStreamId(String metaId, String version) {
+    public <T> List<FlowContext<T>> findByStreamId(String metaId, String version) {
         String streamId = metaId + STREAM_ID_SEPARATOR + version;
         List<FlowContextPO> flowContextPOs = contextMapper.findByStreamId(streamId);
-        return flowContextPOs.stream().map(this::serializer).collect(Collectors.toList());
+        return flowContextPOs.stream()
+                .map(this::serializer)
+                .map(ObjectUtils::<FlowContext<T>>cast)
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -353,25 +369,24 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
     }
 
     @Override
-    public void updateContextPool(List<FlowContext<FlowData>> after, Set<String> traces) {
+    public <T> void updateContextPool(List<FlowContext<T>> after, Set<String> traces) {
         traceRepo.updateContextPool(new ArrayList<>(traces),
                 after.stream().map(IdGenerator::getId).collect(Collectors.toList()));
     }
 
     @Override
-    public void save(FlowTrace trace, FlowContext<FlowData> flowContext) {
-        trace.setOperator(flowContext.getData().getOperator());
-        trace.setApplication(flowContext.getData().getApplication());
-        trace.setStartTime(flowContext.getData().getStartTime());
+    public <T> void save(FlowTrace trace, FlowContext<T> flowContext) {
+        FlowContext<FlowData> realFlowContext = ObjectUtils.<FlowContext<FlowData>>cast(flowContext);
+        trace.setOperator(realFlowContext.getData().getOperator());
+        trace.setApplication(realFlowContext.getData().getApplication());
+        trace.setStartTime(realFlowContext.getData().getStartTime());
         traceRepo.save(trace);
     }
 
-    @Override
     public FlowRetry getRetrySchedule(String entityId) {
         return retryRepo.getById(entityId);
     }
 
-    @Override
     public boolean isMaxRetryCount(String entityId) {
         if (maxRetryCount == 0) {
             return true;
@@ -383,17 +398,14 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         return flowRetry.getRetryCount() >= maxRetryCount;
     }
 
-    @Override
     public void createRetrySchedule(List<FlowRetry> flowRetryList) {
         retryRepo.save(flowRetryList);
     }
 
-    @Override
     public void updateRetrySchedule(List<String> entityIdList, LocalDateTime nextRetryTime) {
         retryRepo.updateNextRetryTime(entityIdList, nextRetryTime);
     }
 
-    @Override
     public void saveRetrySchedule(List<FlowContext<FlowData>> contexts) {
         String toBatch = contexts.get(0).getToBatch();
         FlowRetry flowRetry = this.getRetrySchedule(toBatch);
@@ -406,14 +418,13 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         }
     }
 
-    @Override
     public void deleteRetryRecord(List<String> entityIdList) {
         retryRepo.delete(entityIdList);
     }
 
     private FlowContextPO serializer(FlowContext<FlowData> context) {
         String traceId = String.join(TRACE_ID_SEPARATE, context.getTraceId());
-        context.getData().getContextData().put("flowTransId", context.getTrans().getId());
+        context.getData().getContextData().put("flowTransId", context.getSession().getId());
         context.getData().getContextData().put("metaId", context.getId());
         context.getData().getBusinessData().put(PASS_DATA, context.getData().getPassData());
         context.getData().getContextData().put("contextId", context.getId());
@@ -422,7 +433,7 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         FlowContextPO result = FlowContextPO.builder()
             .contextId(context.getId())
             .traceId(traceId)
-            .transId(context.getTrans().getId())
+            .transId(context.getSession().getId())
             .rootId(context.getRootId())
             .streamId(context.getStreamId())
             .flowData(context.getData().translateToJson())
@@ -444,16 +455,30 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
 
     private FlowContext<FlowData> serializer(FlowContextPO po) {
         Set<String> traceId = convertTextToSet(po.getTraceId());
-        FlowContext<FlowData> context = new FlowContext<>(po.getStreamId(), po.getRootId(), getFlowData(po), traceId,
-                po.getPositionId(), po.getParallel(), po.getParallelMode(), LocalDateTime.now());
+        FlowContext<FlowData> context = new FlowContext<>(po.getStreamId(),
+                po.getRootId(),
+                getFlowData(po),
+                traceId,
+                po.getPositionId(),
+                po.getParallel(),
+                po.getParallelMode(),
+                new FlowSession(po.getTransId()),
+                LocalDateTime.now());
         convertOthers(po, context);
         return context;
     }
 
     private FlowContext<String> serializerAsString(FlowContextPO po) {
         Set<String> traceIds = convertTraceIds(po);
-        FlowContext<String> context = new FlowContext<>(po.getStreamId(), po.getRootId(), po.getFlowData(), traceIds,
-                po.getPositionId(), po.getParallel(), po.getParallelMode(), LocalDateTime.now());
+        FlowContext<String> context = new FlowContext<>(po.getStreamId(),
+                po.getRootId(),
+                po.getFlowData(),
+                traceIds,
+                po.getPositionId(),
+                po.getParallel(),
+                po.getParallelMode(),
+                new FlowSession(po.getTransId()),
+                LocalDateTime.now());
         convertOthers(po, context);
         return context;
     }
@@ -469,7 +494,7 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
     private <T> void convertOthers(FlowContextPO po, FlowContext<T> context) {
         context.setId(po.getContextId());
         context.setPrevious(po.getPrevious());
-        context.setTrans(new FlowTrans(po.getTransId()));
+        context.setSession(new FlowSession(po.getTransId()));
         context.setStatus(FlowNodeStatus.valueOf(po.getStatus()));
         context.batchId(po.getBatchId());
         context.toBatch(po.getToBatch());
@@ -496,12 +521,12 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         contextMapper.updateStatus(contextId, status);
     }
 
-    @Override
-    public List<FlowContext<FlowData>> findByTraceId(String traceId) {
-        return contextMapper.findByTraceId(traceId).stream().map(this::serializer).collect(Collectors.toList());
-    }
-
-    @Override
+    /**
+     * 根据traceId查询所有错误上下文
+     *
+     * @param traceId traceId
+     * @return 错误上下文集合
+     */
     public List<FlowContext<FlowData>> findErrorContextsByTraceId(String traceId) {
         return contextMapper.findErrorContextByTraceId(traceId)
                 .stream()
@@ -509,7 +534,12 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
                 .collect(Collectors.toList());
     }
 
-    @Override
+    /**
+     * 根据transId查询所有错误上下文
+     *
+     * @param transId transId
+     * @return 错误上下文集合
+     */
     public List<FlowContext<FlowData>> findErrorContextsByTransId(String transId) {
         return contextMapper.findErrorContextByTransId(transId)
                 .stream()
@@ -533,41 +563,24 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         }).filter(Objects::nonNull).collect(Collectors.toList());
     }
 
-    @Override
+    /**
+     * 根据transId返回运行状态的contextId
+     *
+     * @param flowTransId transId
+     * @return context ID列表
+     */
     public List<String> getRunningContextsIdByTransaction(String flowTransId) {
         return contextMapper.getRunningContextsIdByTransaction(flowTransId);
     }
 
-    @Override
+    /**
+     * 根据transId返回运行状态的contextId
+     *
+     * @param traceId traceId
+     * @return context ID列表
+     */
     public List<String> getRunningContextsIdByTraceId(String traceId) {
         return contextMapper.getRunningContextsIdByTraceId(traceId);
-    }
-
-    @Override
-    public List<FlowContext<FlowData>> findFinishedContextsPagedByTransId(String flowTransId, String endNode,
-            Integer pageNum, Integer limit) {
-        return contextMapper.findFinishedContextsPagedByTransId(flowTransId, endNode, pageNum, limit)
-                .stream()
-                .map(this::serializer)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<FlowContext<FlowData>> getEndContextsPagedByTransId(String flowTransId, String endNode, Integer pageNum,
-            Integer limit) {
-        return contextMapper.findEndContextsPagedByTransId(flowTransId, endNode, pageNum, limit)
-                .stream()
-                .map(this::serializer)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<FlowContext<FlowData>> getErrorContextsPagedByTransId(String flowTransId, Integer pageNum,
-            Integer limit) {
-        return contextMapper.findErrorContextsPagedByTransId(flowTransId, pageNum, limit)
-                .stream()
-                .map(this::serializer)
-                .collect(Collectors.toList());
     }
 
     @Override
@@ -575,17 +588,35 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         return contextMapper.getStreamIdByTransId(flowTransId);
     }
 
-    @Override
+    /**
+     * 根据transId获取已完成上下文呢数量
+     * 包括end节点和错误状态的上下文
+     *
+     * @param flowTransId trans id
+     * @param endNode 结束节点Id
+     * @return 已完成上下文集合
+     */
     public int findFinishedPageNumByTransId(String flowTransId, String endNode) {
         return contextMapper.findFinishedPageNumByTransId(flowTransId, endNode);
     }
 
-    @Override
+    /**
+     * 获取结束节点上下文数量
+     *
+     * @param flowTransId trans id
+     * @param endNode 结束节点id
+     * @return 结束节点上下文个数
+     */
     public int findEndContextsPageNumByTransId(String flowTransId, String endNode) {
         return contextMapper.findEndContextsNumByTransId(flowTransId, endNode);
     }
 
-    @Override
+    /**
+     * 获取错误状态上下文数量
+     *
+     * @param flowTransId trans id
+     * @return 上下文集合
+     */
     public int findErrorContextsPageNumByTransId(String flowTransId) {
         return contextMapper.findErrorContextsNumByTransId(flowTransId);
     }
@@ -600,7 +631,15 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         contextMapper.deleteByTransId(transId);
     }
 
-    @Override
+    /**
+     * findFinishedContextsPagedByTraceId
+     *
+     * @param traceId traceId
+     * @param endNode endNode
+     * @param pageNum pageNum
+     * @param limit limit
+     * @return List<FlowContext < FlowData>>
+     */
     public List<FlowContext<FlowData>> findFinishedContextsPagedByTraceId(String traceId, String endNode,
             Integer pageNum, Integer limit) {
         return contextMapper.findFinishedContextsPagedByTraceId(traceId, endNode, pageNum, limit)
@@ -609,7 +648,15 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
                 .collect(Collectors.toList());
     }
 
-    @Override
+    /**
+     * getEndContextsPagedByTraceId
+     *
+     * @param traceId traceId
+     * @param endNode endNode
+     * @param pageNum pageNum
+     * @param limit limit
+     * @return List<FlowContext < FlowData>>
+     */
     public List<FlowContext<FlowData>> getEndContextsPagedByTraceId(String traceId, String endNode, Integer pageNum,
             Integer limit) {
         return contextMapper.findEndContextsPagedByTraceId(traceId, endNode, pageNum, limit)
@@ -618,7 +665,14 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
                 .collect(Collectors.toList());
     }
 
-    @Override
+    /**
+     * getErrorContextsPagedByTraceId
+     *
+     * @param traceId traceId
+     * @param pageNum pageNum
+     * @param limit limit
+     * @return List<FlowContext < FlowData>>
+     */
     public List<FlowContext<FlowData>> getErrorContextsPagedByTraceId(String traceId, Integer pageNum, Integer limit) {
         return contextMapper.findErrorContextsPagedByTraceId(traceId, pageNum, limit)
                 .stream()
@@ -626,22 +680,44 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
                 .collect(Collectors.toList());
     }
 
-    @Override
+    /**
+     * findFinishedPageNumByTraceId
+     *
+     * @param traceId traceId
+     * @param endNode endNode
+     * @return int
+     */
     public int findFinishedPageNumByTraceId(String traceId, String endNode) {
         return contextMapper.findFinishedPageNumByTraceId(traceId, endNode);
     }
 
-    @Override
+    /**
+     * findEndContextsPageNumByTraceId
+     *
+     * @param traceId traceId
+     * @param endNode endNode
+     * @return int
+     */
     public int findEndContextsPageNumByTraceId(String traceId, String endNode) {
         return contextMapper.findEndContextsNumByTraceId(traceId, endNode);
     }
 
-    @Override
+    /**
+     * findErrorContextsPageNumByTraceId
+     *
+     * @param traceId traceId
+     * @return int
+     */
     public int findErrorContextsPageNumByTraceId(String traceId) {
         return contextMapper.findErrorContextsNumByTraceId(traceId);
     }
 
-    @Override
+    /**
+     * getRunningContextsByTraceId
+     *
+     * @param traceId traceId
+     * @return List<FlowContext < T>>
+     */
     public List<FlowContext<FlowData>> getRunningContextsByTraceId(String traceId) {
         return contextMapper.getRunningContextsByTraceId(traceId)
                 .stream()
@@ -649,7 +725,11 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
                 .collect(Collectors.toList());
     }
 
-    @Override
+    /**
+     * getTraceOwnerService
+     *
+     * @return TraceOwnerService
+     */
     public TraceOwnerService getTraceOwnerService() {
         return traceOwnerService;
     }
@@ -659,12 +739,24 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         contextMapper.deleteByContextIds(contextIds);
     }
 
-    @Override
+    /**
+     * 根据contextIds获取traceIds
+     *
+     * @param contextIds contextIds
+     * @return traceId列表
+     */
     public List<String> findTraceIdsByContextIds(List<String> contextIds) {
         return contextMapper.findTraceIdsByContextIds(contextIds);
     }
 
-    @Override
+    /**
+     * 获取所有已完成上下文呢集合
+     * 包括end节点和错误状态的上下文
+     *
+     * @param flowTransId transId
+     * @param endNode 结束节点id
+     * @return 上下文集合
+     */
     public List<FlowContext<FlowData>> findFinishedContextsByTransId(String flowTransId, String endNode) {
         return contextMapper.findFinishedContextsByTransId(flowTransId, endNode)
                 .stream()
@@ -672,7 +764,13 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
                 .collect(Collectors.toList());
     }
 
-    @Override
+    /**
+     * findFinishedContextsByTraceId
+     *
+     * @param flowTraceId flowTraceId
+     * @param endNode endNode
+     * @return List<FlowContext < FlowData>>
+     */
     public List<FlowContext<FlowData>> findFinishedContextsByTraceId(String flowTraceId, String endNode) {
         return contextMapper.findFinishedContextsByTraceId(flowTraceId, endNode)
                 .stream()
@@ -680,7 +778,11 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
                 .collect(Collectors.toList());
     }
 
-    @Override
+    /**
+     * 在节点处理完成后，之前这批context的状态，toBatch, 节点位置信息
+     *
+     * @param contexts 同一批context
+     */
     public void updateProcessStatus(List<FlowContext<FlowData>> contexts) {
         List<String> ids = contexts.stream().map(IdGenerator::getId).collect(Collectors.toList());
 
@@ -696,7 +798,12 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
                 CONTEXT_EXCLUSIVE_STATUS_MAP.get(status));
     }
 
-    @Override
+    /**
+     * 根据to batch id查询不带有flow data的上下文数据
+     *
+     * @param toBatchIds toBatchId列表
+     * @return 上下文列表
+     */
     public List<FlowContext<String>> getWithoutFlowDataByToBatch(List<String> toBatchIds) {
         if (toBatchIds.isEmpty()) {
             return new ArrayList<>();
@@ -705,7 +812,13 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         return pos.stream().map(this::serializerAsString).collect(Collectors.toList());
     }
 
-    @Override
+    /**
+     * 至少含有一个符合状态的context
+     *
+     * @param statusList 状态列表
+     * @param traceId trace id
+     * @return true or false
+     */
     public boolean hasContextWithStatus(List<String> statusList, String traceId) {
         if (statusList.isEmpty()) {
             return false;
@@ -714,7 +827,13 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         return count != 0;
     }
 
-    @Override
+    /**
+     * 所有context状态都符合要求
+     *
+     * @param statusList 状态列表
+     * @param traceId trace id
+     * @return true or false
+     */
     public boolean isAllContextStatus(List<String> statusList, String traceId) {
         if (statusList.isEmpty()) {
             return false;
@@ -723,7 +842,14 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         return count == 0;
     }
 
-    @Override
+    /**
+     * 在某个节点至少含有一个符合状态的context
+     *
+     * @param statusList 状态列表
+     * @param traceId trace id
+     * @param position 位置
+     * @return true or false
+     */
     public boolean hasContextWithStatusAtPosition(List<String> statusList, String traceId, String position) {
         if (statusList.isEmpty()) {
             return false;
@@ -732,12 +858,21 @@ public class FlowContextPersistRepo implements FlowContextRepo<FlowData> {
         return count != 0;
     }
 
-    @Override
+    /**
+     * 根据trace id获取trans id
+     *
+     * @param traceId trace id
+     * @return trans id
+     */
     public String getTransIdByTrace(String traceId) {
         return contextMapper.getTransIdByTrace(traceId);
     }
 
-    @Override
+    /**
+     * 根据链路唯一标识列表删除对应的上下文数据。
+     *
+     * @param traceIdList 表示链路唯一标识列表的 {@link List}{@code <}{@link String}{@code >}。
+     */
     public void deleteByTraceIdList(List<String> traceIdList) {
         if (CollectionUtils.isEmpty(traceIdList)) {
             return;
